--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <form id="register-form">
                 <div class="input-box">
                     <label for="id">id</label>
-                    <input id="id" type="text" placeholder="Your Id">
+                    <input id="id" type="text" placeholder="Your Id" required>
                 </div>
                 <div class="input-box">
                     <label for="name">Name</label>
